Fix CSS alignment

--- a/css/main.css
+++ b/css/main.css
@@ -204,8 +204,6 @@ svg, rect {
 }
 
 .people-list {
-  flex-wrap: wrap;
-  justify-content: space-between;
   max-width: 1200px;
   width: 100%;
   margin-left: auto;
@@ -218,6 +216,7 @@ svg, rect {
   box-sizing: border-box;
   font-size: 14px;
   margin-bottom: 80px;
+  vertical-align: top;
 
   max-width: 21.5%;
   width: 100%;
